--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   },
   "homepage": "https://github.com/loreanvictor/connect-platform-biolerplate#readme",
   "dependencies": {
-    "connect-platform": "^0.2.23",
+    "connect-platform": "^0.2.24",
     "ncp": "^2.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "dotenv": "^8.2.0"
   }
 }
